# Qwen3-VL

./: .gitignore  AGENTS.md  CLAUDE.md  TRAINING.md  convert_to_training_format.py  download_dataset.py  evaluate_model.py  prepare_huggingface_dataset.py  prepare_video_segments.py  pyproject.toml  train_physical_ai.sh  train_physical_ai_lora.sh
qwen-vl-finetune/qwenvl/data/: __init__.py
